--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   image_picker: ^1.0.4
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
